Attempt to fix font size of index.html heading on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ h1 .voidtitle {
 
 @media (min-width: 481px) {
     h1 {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 }
 
